src/test/deca/context/invalid/created/voidElmt/variable.deca
// Description:
//      Declaration d'une variable void
// Resultat:
//      Ligne 7 : Variable can't be void

{
    void a;
}